--- a/frontend/src/lib/question/question.component.css
+++ b/frontend/src/lib/question/question.component.css
@@ -7,14 +7,13 @@
 
 .questiontitle{
   background-color: transparent;
-  font-size: 25px;
+  font-size: 20px;
   font-weight: bold;
   text-align: center;
   margin-top: 10px;
   margin-right: 10px;
   margin-bottom: 2vh;
   cursor: pointer;
-  width: 400px;
   height: auto;
   border-color: transparent;
 }
@@ -57,4 +56,7 @@ input[id=yesNo]:checked {
   -webkit-filter: none;
   -moz-filter: none;
   filter: none;
+}
+#inputLabel{
+  font-size: 20px;
 }
