fixed saving anwers, imports and looping background

--- a/frontend/src/lib/survey-question/survey-question.component.html
+++ b/frontend/src/lib/survey-question/survey-question.component.html
@@ -28,7 +28,7 @@
     <mat-form-field>
       <input
       matInput placeholder="Your Answer"
-      (change)="this.question.individualAnswer"
+      (change)="updateCustomAnswer($event)"
       [formControlName]="this.question.title"
       >
     </mat-form-field>
