--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -568,3 +568,20 @@
   cursor: pointer;
 }
 
+
+
+
+ #sucessicon {
+   position: fixed;
+  font-size: 100px;
+  top:50%;
+   left: 50%;
+   color: springgreen;
+}
+ #failicon {
+   position: fixed;
+  font-size: 100px;
+  top:50%;
+   left: 50%;
+}
+
