--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -73,7 +73,7 @@
   <div class="txt_field">
     <input type="text" required
            [value]="this.newadminpassword"
-           (change)="setpasswortofnewAdmin($event)"
+           (change)="setpasswordofnewAdmin($event)"
     >
     <span></span>
     <label>Password</label>
