--- a/frontend/src/lib/router/surveyResult/surveyResult.component.html
+++ b/frontend/src/lib/router/surveyResult/surveyResult.component.html
@@ -13,7 +13,7 @@
 
   <div> Here could be your Advertisement!</div>
 
-
+  <mat-paginator [length]="200" [pageSize]="1"> </mat-paginator>
 </div>
 
 <div class="returnToMainButton">
