--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
 <div class="toolbar" role="banner">
 
   <div class="text" >
-  <h1> FH'W‑S|VOTE</h1>
+    <input type="image" src="../assets/FHWS_Logo_Vote.png" width="15%" height="15%">
   </div>
 
 
