--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -17,8 +17,19 @@
 </div>
 
   <div id="submitButton">
-    <button mat-flat-button color="primary" [disabled]="this.surveyForm.disable && this.surveyForm.invalid" (click)="submitSurvey()">Submit</button>
+    <button mat-flat-button color="primary" [disabled]="this.surveyForm.disable && this.surveyForm.invalid" (click)="openDialog()" >Submit</button>
   </div>
+
+
+  <ng-template #callAPIDialog>
+  <mat-dialog-content class="mat-typography">
+    <h2>Submit survey?</h2>
+  </mat-dialog-content>
+  <mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close>Cancel</button>
+    <button mat-button [mat-dialog-close]="true" cdkFocusInitial (click)="submitSurvey()">Submit</button>
+  </mat-dialog-actions>
+</ng-template>
 
 
 <button mat-flat-button color="primary" (click)="debug()">Debug</button>
