--- a/frontend/src/lib/router/editor/editor.component.html
+++ b/frontend/src/lib/router/editor/editor.component.html
@@ -15,23 +15,22 @@
     <div id="surveyNameInput">
       <mat-form-field [ngStyle]="{'width.ch': inputText.value.length, 'min-width.ch': 40, 'max-width.ch': 60}">
         <mat-label>Survey Name</mat-label>
-        <input matInput #inputText class="inputfield" type="text" [(ngModel)]="this.editor.vote.name" required>
+        <input matInput #inputText class="inputfield" type="text" [(ngModel)]="this.vote.name" required>
       </mat-form-field> <br>
     </div>
     <br/>
 
     <div id="expirationDateInput">
       <mat-label>Expiration</mat-label><br/>
-      <input  class="inputfield" type="datetime-local" id="timeinputfield" [(ngModel)]="this.editor.vote.lifetime" required><br/>
+      <input  class="inputfield" type="datetime-local" id="timeinputfield" [(ngModel)]="this.vote.lifetime" required><br/>
     </div>
 
   </section>
 
-
     <section id="questionList">
       <h2>Questions:</h2>
       <ul>
-        <li *ngFor="let question of editor.vote.questions">
+        <li *ngFor="let question of vote.questions">
           <div class="questiontitle" (click)="this.next = false; showQuestion(question)">
             {{question.title}}
 
@@ -48,7 +47,7 @@
   <div *ngIf="!this.next" class="questionwindow">
 
     <ul class="questioneditor">
-      <li *ngFor="let question of editor.vote.questions">
+      <li *ngFor="let question of vote.questions">
         <question *ngIf="question.visible" [question]="question"></question>
       </li>
     </ul>
@@ -64,12 +63,11 @@
       <input matInput type="email" #inputText class="inputfield" id="emailInput" [(ngModel)]="this.tempEmail">
       <mat-label id="inputfield">Enter here...</mat-label>
     </mat-form-field>
-    <li *ngFor="let email of this.editor.vote.emails" class="emailstyle">
+    <li *ngFor="let email of this.vote.emails" class="emailstyle">
       {{email}}
       <button id="delete" mat-icon-button (click)="deleteEmail(email)">
         <mat-icon>delete</mat-icon>
       </button>
-<!--      <img src="../../../assets/deleteButton.png" width="20px" (click)="this.deleteEmail(email)">-->
     </li>
   </ul>
 </div>
