--- a/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
+++ b/frontend/src/lib/voteListModule/votecontainer/voteContainer.component.html
@@ -14,7 +14,7 @@
 <div id="body">
   <ul>
     <li *ngFor="let vote of vlcObject.votes">
-      <vote [voteObject]="vote"></vote>
+      <vote [voteObject]="vote" (deleteVoteEvent)="this.deleteVote($event)"></vote>
     </li>
 
   </ul>
