--- a/frontend/src/lib/router/survey/survey.component.css
+++ b/frontend/src/lib/router/survey/survey.component.css
@@ -44,3 +44,23 @@
   margin-right: auto;
   margin-top: 1vh;
 }
+
+#afterSubmit {
+  background-color: #eee;
+  display: block;
+  align-items: center;
+  top:40%;
+  height: 10%;
+  margin-left: auto;
+  margin-right: auto;
+  border: 3px solid #ff8200;
+  border-radius: 20px 20px 20px 20px;
+  width: 20%;
+
+}
+
+#afterSubmit h1 {
+  font-size: 30px;
+  font-weight: 400;
+}
+
