Error Message for User + update SessionKey after error, toLowerCase for email at Login

--- a/frontend/src/lib/router/mainmenu/mainmenu.component.html
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.html
@@ -46,10 +46,11 @@
 
 
 
+
 <div class="listwindow">
   <div class="background" >
     <div class="headline">
-        Your Votes
+        Your Polls
       </div>
 
     <voteContainer></voteContainer>
