add working timestamp and finish tag for Vote, make add surveyleader available for others + bugfix

--- a/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.html
+++ b/frontend/src/lib/polllistmodule/pollcontainer/PollContainer.component.html
@@ -14,7 +14,7 @@
 <div id="body">
   <ul>
     <li *ngFor="let vote of vlcObject.votes">
-      <vote [voteObject]="vote" (deleteVoteEvent)="this.deleteVote($event)"></vote>
+      <vote [voteObject]="vote" (deletePollEvent)="this.deleteVote($event)"></vote>
     </li>
 
   </ul>
