updated api (again)

--- a/frontend/src/lib/router/survey/survey.component.html
+++ b/frontend/src/lib/router/survey/survey.component.html
@@ -33,7 +33,7 @@
 </ng-template>
 
 
-<!--<button mat-flat-button color="primary" (click)="debug()">Debug</button> -->
+<button mat-flat-button color="primary" (click)="debug()">Debug</button>
 
 </div>
 
