--- a/frontend/src/lib/router/PollResult/pollResult.component.css
+++ b/frontend/src/lib/router/PollResult/pollResult.component.css
@@ -15,7 +15,11 @@
  color:#ff8200 ;
   cursor: pointer;
 }
-
+#chart {
+  max-width: 500px;
+  margin: 50px;
+  padding: 0;
+}
 
 
 .resultwindow  {
