--- a/frontend/src/lib/router/PollResult/pollResult.component.css
+++ b/frontend/src/lib/router/PollResult/pollResult.component.css
@@ -19,8 +19,7 @@
 #chart {
   max-width: 70%;
   margin: 50px;
-  padding: 0;
-  margin-left: 300px;
+  margin-left: 150px;
 }
 
 
@@ -28,6 +27,7 @@
   text-align: center;
   font-size: 40px;
   position: fixed;
+  place-content: center;
   right: 15%;
   background-color: rgba(239, 238, 238, 1);
   border: 3px solid #2691d9;
@@ -51,6 +51,12 @@
   font-size: 20px;
   font-weight: 400;
   margin: 10px;
+}
+#questiontitle{
+  position: relative;
+  font-weight: bolder;
+  font-size: 30px;
+  margin-top: 20px;
 }
 
 .returnToMainButton {
