--- a/frontend/src/lib/router/login/login.component.css
+++ b/frontend/src/lib/router/login/login.component.css
@@ -105,23 +105,32 @@
 }
 
 
-.loginfield #loginwindow .helpbutton{
-  position: relative;
-  padding:0 5px;
-  top: 20%;
-  left: 5%;
+.loginfield #loginwindow .txt_field .helpbutton{
+
+
+  position: absolute;
+  top: 130%;
+  left: 5px;
   color: #a6a6a6;
+  font-size: 16px;
   cursor: pointer;
 }
-.loginfield #loginwindow .helpbutton:hover{
+.loginfield #loginwindow .txt_field .helpbutton:hover{
+
   text-decoration: underline;
   color: #2691d9;
 }
 
-.loginfield #loginwindow .wronguserdata{
-  position: fixed;
-  top: 70%;
+.loginfield #loginwindow .txt_field .wronguserdata{
+
+  position: absolute;
+  width: 100%;
+  top: 180%;
+  text-align: center;
   color: #ff0000;
+  font-size: 16px;
+  pointer-events: none;
+
 }
 
 .loginfield #loginwindow input[type="submit"]{
