--- a/frontend/src/lib/router/mainmenu/mainmenu.component.css
+++ b/frontend/src/lib/router/mainmenu/mainmenu.component.css
@@ -106,6 +106,16 @@
   transition: .4s;
 }
 
+.adminGenerator .txt_field .invalidPasswordLength{
+  color: red;
+  font-size: 15px;
+  position: absolute;
+  top: 130%;
+  left: 5px;
+  pointer-events: none;
+  transition: .4s;
+}
+
 
 .adminGenerator .txt_field span::before{
   content: "";
@@ -323,6 +333,19 @@
   pointer-events: none;
   transition: .4s;
 }
+
+
+.changePassword .txt_field .invalidPasswordLength{
+  color: red;
+  font-size: 15px;
+  position: absolute;
+  top: 130%;
+  left: 5px;
+
+  pointer-events: none;
+  transition: .4s;
+}
+
 
 .changePassword .txt_field span::before{
   content: "";
